ios/Classes/src/native_opencv.h

extern const char *opencvVersion();
extern const char *opencvProcessStream(char *bytes, int width, int height, char *outputImagePath);